--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>Jonathan Cruz</h1>
+
+    <a href="https://jonathancruzfort.github.io/pomodoro-power">powerful-pomodoro</a>
   </body>
 </html>
